# signal_light_demo

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  tuyaopen.project.ini
.cursor/: hooks.json
.cursor/hooks/: signal-light.sh
.tuyaopen/: architecture.json  board-context.md  project.json  status.json
source/embedded/: CMakeLists.txt  Kconfig
source/embedded/config/: DNESP32S3.config  DNESP32S3_BOX.config  DNESP32S3_BOX2_WIFI.config  ESP32S3_BREAD_COMPACT_WIFI.config  TUYA_T5AI_BOARD_LCD_3.5.config  TUYA_T5AI_BOARD_LCD_3.5_CAMERA.config  TUYA_T5AI_BOARD_LCD_3.5_CAM_PRINTER.config  TUYA_T5AI_BOARD_LCD_3.5_v101.config  TUYA_T5AI_CORE.config  WAVESHARE_ESP32S3_TOUCH_AMOLED_1_8.config  WAVESHARE_T5AI_TOUCH_AMOLED_1_75.config
source/embedded/doc/: 核心板红绿灯.step
source/embedded/include/: agent_status.h  app_printer.h  signal_config.h  signal_discovery.h  signal_led.h  signal_mock.h  signal_oled.h  signal_oled_icon.h  signal_transport.h  signal_voice_key.h  signal_ws.h  tuya_config.h
source/embedded/src/: agent_status.c  app_chat_bot.c  app_printer.c  app_ui_action.c  signal_discovery.c  signal_led.c  signal_mock.c  signal_oled.c  signal_transport.c  signal_voice_key.c  signal_ws.c  tuya_main.c
tools/: bridge_transport.py  cursor_signal_bridge.py  cursor_signal_hook.py  cursor_signal_keepalive.py  mac_hotkey_inject.py  mac_text_inject.py  requirements-bridge.txt  run_bridge.bat  run_bridge.sh  signal_bridge_config.json  signal_bridge_log.py  signal_bridge_run.py  signal_discovery.py  signal_mock_client.py  signal_transport_switch.py  signal_ws_server.py  uart_ipc.py
(+68 files in other folders)
